@@ -5,7 +5,7 @@
 
     <groupId>eu.europa.ec.dynamic-discovery</groupId>
     <artifactId>dynamic-discovery-parent</artifactId>
-    <version>2.4-SNAPSHOT</version>
+    <version>3.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>dynamic-discovery-parent</name>
@@ -48,8 +48,9 @@
         <project.scm.id>edelivery-scm</project.scm.id>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+        <maven.test.argLine> -XX:+EnableDynamicAgentLoading</maven.test.argLine>
 
         <release.arguments>-Dmaven.javadoc.skip=true -Dmaven.test.skipTests=true -Dmaven.test.skip=true</release.arguments>
 
@@ -63,38 +64,38 @@
         <surefire.argLine>-Xmx1G</surefire.argLine>
 
         <!-- dependencies -->
-        <bouncycastle.version>1.78.1</bouncycastle.version>
-        <commons-cli.version>1.6.0</commons-cli.version>
-        <commons-lang3.version>3.14.0</commons-lang3.version>
+        <bouncycastle.version>1.79</bouncycastle.version>
+        <commons-cli.version>1.9.0</commons-cli.version>
+        <commons-lang3.version>3.17.0</commons-lang3.version>
         <dnsjava.version>3.6.2</dnsjava.version>
-        <hamcrest.version>2.2</hamcrest.version>
+        <hamcrest.version>3.0</hamcrest.version>
         <httpclient.version>5.3.1</httpclient.version>
-        <jakarta.xml.bind-api.version>2.3.3</jakarta.xml.bind-api.version>
-        <jaxb-api.version>2.3.1</jaxb-api.version>
+        <jakarta.xml.bind-api.version>4.0.2</jakarta.xml.bind-api.version>
         <junit-platform-surefire-provider.version>1.3.2</junit-platform-surefire-provider.version>
-        <junit.version>5.10.5</junit.version>
-        <mockito.version>4.11.0</mockito.version>
-        <org.eclipse.jetty.version>9.4.56.v20240826</org.eclipse.jetty.version>
-        <org.glassfish.jaxb.jaxb-runtime.version>2.3.9</org.glassfish.jaxb.jaxb-runtime.version>
+        <junit.version>5.11.3</junit.version>
+        <mockito.version>5.2.0</mockito.version>
+        <net.bytebuddy.version>1.15.10</net.bytebuddy.version>
+        <org.eclipse.jetty.version>11.0.24</org.eclipse.jetty.version>
+        <org.glassfish.jaxb.jaxb-runtime.version>4.0.5</org.glassfish.jaxb.jaxb-runtime.version>
         <saxon-he.version>12.4</saxon-he.version>
         <slf4j.version>2.0.16</slf4j.version>
-        <spring-test.version>5.3.39</spring-test.version>
+        <spring-test.version>6.2.0</spring-test.version>
         <!-- plugins -->
         <plugin.dependency-check-maven.version>11.1.0</plugin.dependency-check-maven.version>
         <plugin.jacoco-maven-plugin.version>0.8.12</plugin.jacoco-maven-plugin.version>
-        <plugin.jaxb2-maven-plugin.version>2.5.0</plugin.jaxb2-maven-plugin.version>
-        <plugin.jbuild-helper-maven-plugin.version>1.12</plugin.jbuild-helper-maven-plugin.version>
-        <plugin.license-maven-plugin.version>2.3.0</plugin.license-maven-plugin.version>
-        <plugin.maven-assembly-plugin.version> 3.6.0</plugin.maven-assembly-plugin.version>
-        <plugin.maven-compiler-plugin.version>3.12.1</plugin.maven-compiler-plugin.version>
-        <plugin.maven-failsafe-plugin.version>3.1.2</plugin.maven-failsafe-plugin.version>
+        <plugin.jaxb2-maven-plugin.version>3.2.0</plugin.jaxb2-maven-plugin.version>
+        <plugin.jbuild-helper-maven-plugin.version>3.6.0</plugin.jbuild-helper-maven-plugin.version>
+        <plugin.license-maven-plugin.version>2.4.0</plugin.license-maven-plugin.version>
+        <plugin.maven-assembly-plugin.version>3.7.1</plugin.maven-assembly-plugin.version>
+        <plugin.maven-compiler-plugin.version>3.13.0</plugin.maven-compiler-plugin.version>
+        <plugin.maven-failsafe-plugin.version>3.5.1</plugin.maven-failsafe-plugin.version>
         <plugin.maven-jar-plugin.version.version>3.3.0</plugin.maven-jar-plugin.version.version>
-        <plugin.maven-release-plugin.version>3.0.1</plugin.maven-release-plugin.version>
-        <plugin.maven-shade-plugin.version>3.5.3</plugin.maven-shade-plugin.version>
-        <plugin.maven-surefire-plugin.version>3.2.5</plugin.maven-surefire-plugin.version>
+        <plugin.maven-release-plugin.version>3.1.1</plugin.maven-release-plugin.version>
+        <plugin.maven-shade-plugin.version>3.6.0</plugin.maven-shade-plugin.version>
+        <plugin.maven-surefire-plugin.version>3.5.2</plugin.maven-surefire-plugin.version>
         <plugin.xml-maven-plugin.version>1.1.0</plugin.xml-maven-plugin.version>
         <!-- latest version compatible with SonarQube 5.6 -->
-        <plugin.sonar.version>3.5.0.1254</plugin.sonar.version>
+        <plugin.sonar.version>4.0.0.4121</plugin.sonar.version>
         <plugin.maven-source-plugin.version>3.3.1</plugin.maven-source-plugin.version>
 
     </properties>
@@ -505,6 +506,16 @@
                 <version>${org.eclipse.jetty.version}</version>
                 <scope>test</scope>
             </dependency>
+            <dependency>
+                <groupId>net.bytebuddy</groupId>
+                <artifactId>byte-buddy</artifactId>
+                <version>${net.bytebuddy.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>net.bytebuddy</groupId>
+                <artifactId>byte-buddy-agent</artifactId>
+                <version>${net.bytebuddy.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -618,6 +629,32 @@
                     <arguments>-Dmaven.javadoc.skip=true -Dmaven.test.skipTests=true -Dmaven.test.skip=true</arguments>
                     <!-- Automatically assign submodules the parent version during the release. -->
                     <autoVersionSubmodules>true</autoVersionSubmodules>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <reportFormat>brief</reportFormat>
+                    <includes>
+                        <include>**/*Test.java</include>
+                    </includes>
+                    <excludedGroups>benchmark</excludedGroups>
+                    <!-- We need to reinitialize classes based on the configuration -->
+                    <reuseForks>false</reuseForks>
+                    <!-- Just one fork to prevent MockMVC context mixing/issues -->
+                    <forkCount>1</forkCount>
+                    <forkNode implementation="org.apache.maven.plugin.surefire.extensions.SurefireForkNodeFactory" />
+                    <!-- @{argLine} is generated by jacoco-prepare -->
+                    <argLine>${maven.test.argLine} @{argLine}</argLine>
+                    <systemPropertyVariables>
+                        <product.version>${project.version}</product.version>
+                        <org.apache.xml.security.securerandom.algorithm>SHA1PRNG</org.apache.xml.security.securerandom.algorithm>
+                        <file.encoding>UTF-8</file.encoding>
+                    </systemPropertyVariables>
+                    <environmentVariables>
+                        <LANG>en_US.UTF-8</LANG>
+                        <LANGUAGE>en_US:us</LANGUAGE>
+                    </environmentVariables>
                 </configuration>
             </plugin>
         </plugins>
